src/components/CommentsList/CommentsList.module.scss
@use '../../styles/settings/gutters';
@use '../../styles/settings/fonts';
@use '../../styles/settings/colors';
@use '../../styles/settings/media';

.commentsWrapper {
    margin-bottom: gutters.$gutter-bigger;

    @include media.bp(md) {
        width: 66%;
        margin-left: 18.5%;
    }

    .commentsHead {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;
        margin-bottom: gutters.$gutter;

        @include media.bp(sm) {
            flex-direction: row;
            justify-content: space-between;
            align-items: center;
            margin-bottom: 0;
        }
    }

    .title {
        color: colors.$color-primary;
        font-family: fonts.$font-headline;
        font-size: 22px;
        line-height: 1.25;

        @include media.bp(lg) {
            font-size: 32px;
        }

        strong {
            color: colors.$color-primary-700;
        }
    }

    .meta {
        display: flex;
    }

    .list {
        padding: 0;
        margin: 0;
        list-style: none;
    }

    .comment {
        padding: (gutters.$gutter-medium + gutters.$gutter);
        background: colors.$color-white;
        box-shadow: 0 8px 48px rgba(20, 165, 255, 0.11);
        border-radius: 8px;
        margin-bottom: gutters.$gutter;
    }

    .author {
        margin: 0 0 (gutters.$gutter-small / 2);
        color: colors.$color-primary;
        font-family: fonts.$font-headline;
        font-size: 24px;
        line-height: 1.25;
        letter-spacing: -0.01em;
    }

    .date {
        color: colors.$color-primary-700;
        font-size: 18px;
        line-height: 1.4;
        letter-spacing: -0.01em;
    }

    .text {
        color: colors.$color-primary-700;
        font-size: 18px;
        line-height: 1.4;
        letter-spacing: -0.01em;
    }
}

